Fixing the spacing on mobile and desktop on the hero

--- a/src/assets/scss/02_molecule/_case-study.scss
+++ b/src/assets/scss/02_molecule/_case-study.scss
@@ -123,6 +123,7 @@
 
             @include breakpoints("lg-desktop") {
                 padding-left: 0;
+                padding-right: 100px;
             }
         }
 
